--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Viper</string>
+    <string name="release">"This is test to setup automate build release … "</string>
 </resources>
